# chiropterm

./: .gitignore  Cargo.toml  README.md
examples/: example.rs
src/: aliases.rs  constants.rs  geom.rs  lib.rs  main.rs  spaces.rs
src/cp437/: mod.rs
src/drawing/: brush.rs  mod.rs  screen.rs  stamp.rs
src/drawing/boxart/: mod.rs
src/drawing/brush/: align.rs  bevel.rs  boxart.rs  fill.rs  mod.rs  split.rs
src/formatting/: fstring.rs  mod.rs  preformatter.rs
src/geom/: grid.rs  mod.rs  points_in.rs
src/rendering/: cell.rs  colors.rs  font.rs  mod.rs  renderer.rs  sprite.rs  stdcolors.rs  swatch.rs
src/window_management/: input.rs  keyboard.rs  math.rs  menu.rs  mod.rs  mouse.rs  on_key.rs  redraw_tracking_screen.rs
src/window_management/mouse/: drag.rs  mod.rs  scroll_wheel.rs  wiggle.rs
tools/: binarize.py  cp437.py
tools/srcfiles/: swatch_template.xcf
