[package]
name = "chiropterm"
version = "0.2.0"
authors = ["Nyeogmi <economicsbat@gmail.com>"]
description = "bat-themed fake terminal in the style of libtcod"
readme = "README.md"
homepage = "https://github.com/nyeogmi/chiropterm"
repository = "https://github.com/nyeogmi/chiropterm"
license = "MIT OR Apache-2.0"
# TODO, keywords, categories?
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "1.1.1"
euclid = "0.22.6"
lazy_static = "1.4"
minifb = "0.19.3"
gridd-euclid = "0.1.3"
textwrap = "0.15"

[[example]]
name = "example"